@@ -11,16 +11,25 @@
     <packaging>war</packaging>
 
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <failOnMissingWebXml>false</failOnMissingWebXml>
 
-        <version.wildfly.jar.plugin>4.0.3.Final</version.wildfly.jar.plugin>
-        <version.wildfly>23.0.2.Final</version.wildfly>
-        <version.wildfly.datasources.galleon.pack>2.0.0.Final</version.wildfly.datasources.galleon.pack>
-        <version.resteasy>3.15.1.Final</version.resteasy>
+        <version.wildfly.jar.plugin>10.0.0.Final</version.wildfly.jar.plugin>
+        <version.jakarta.ee>10.0.0</version.jakarta.ee>
+        <version.wildfly>30.0.1.Final</version.wildfly>
+        <version.microprofile>6.0</version.microprofile>
+        <version.wildfly.datasources.galleon.pack>6.0.0.Final</version.wildfly.datasources.galleon.pack>
+        <version.resteasy>6.2.6.Final</version.resteasy>
+        <version.arquillian.bom>1.8.0.Final</version.arquillian.bom>
+        <version.arquillian.container>5.0.1.Final</version.arquillian.container>
+        <version.junit>5.10.1</version.junit>
+        <version.mokito.core>5.8.0</version.mokito.core>
+        <version.mokito.all>1.10.19</version.mokito.all>
+        <version.primefaces>13.0.0</version.primefaces>
+        <version.jboss.ejb3>2.4.0.Final</version.jboss.ejb3>
     </properties>
 
     <dependencyManagement>
@@ -28,7 +37,7 @@
             <dependency>
                 <groupId>org.jboss.arquillian</groupId>
                 <artifactId>arquillian-bom</artifactId>
-                <version>1.6.0.Final</version>
+                <version>${version.arquillian.bom}</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
@@ -76,7 +85,13 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M5</version>
+                <version>3.2.2</version>
+                <configuration>
+                    <argLine>
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                    </argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
@@ -86,40 +101,43 @@
         <dependency>
             <groupId>jakarta.platform</groupId>
             <artifactId>jakarta.jakartaee-api</artifactId>
-            <version>8.0.0</version>
+            <version>${version.jakarta.ee}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.jboss.ejb3</groupId>
             <artifactId>jboss-ejb3-ext-api</artifactId>
-            <version>2.3.0.Final</version>
+            <version>${version.jboss.ejb3}</version>
             <scope>provided</scope>
         </dependency>
 
+        <!--
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>5.3.15.Final</version>
             <scope>provided</scope>
         </dependency>
+        -->
 
         <dependency>
             <groupId>org.primefaces</groupId>
             <artifactId>primefaces</artifactId>
-            <version>8.0</version>
+            <version>${version.primefaces}</version>
+            <classifier>jakarta</classifier>
         </dependency>
 
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-jsapi</artifactId>
-            <version>3.11.2.Final</version>
+            <version>${version.resteasy}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
-            <groupId>org.jboss.arquillian.junit</groupId>
-            <artifactId>arquillian-junit-container</artifactId>
+            <groupId>org.jboss.arquillian.junit5</groupId>
+            <artifactId>arquillian-junit5-container</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -129,43 +147,58 @@
         </dependency>
 
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${version.junit}</version>
             <scope>test</scope>
         </dependency>
 
+        <!--
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>3.3.3</version>
+            <version>${version.mokito.core}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>net.bytebuddy</groupId>
             <artifactId>byte-buddy</artifactId>
-            <version>1.10.9</version>
+            <version>1.14.10</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.objenesis</groupId>
+            <artifactId>objenesis</artifactId>
+            <version>3.3</version>
+            <scope>test</scope>
+        </dependency>
+        -->
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>${version.mokito.all}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.wildfly.arquillian</groupId>
             <artifactId>wildfly-arquillian-container-embedded</artifactId>
-            <version>2.2.0.Final</version>
+            <version>${version.arquillian.container}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
-            <version>2.10.3</version>
+            <version>2.16.0</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>1.4.197</version>
+            <version>2.2.224</version>
 <!--            <scope>test</scope>-->
         </dependency>
 
